--- a/FinalProject/Content/Site.css
+++ b/FinalProject/Content/Site.css
@@ -1,63 +1,7 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿h1 {
+    color: #25ced1;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 20px;
-    font-family: Georgia;
-    text-align: center;
-}
-
-
-.wrapper {
-    display: grid;
-    background-color: #E6EAFF;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 200px;
-}
-
-
-/*list all*/
-.box1 {
-    padding-left: 15px;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 6;
-    font-family: Georgia;
-    /*border-left: 5px solid #68a895;
-    border-right: 5px solid #68a895;
-    border-bottom: 5px solid #68a895;*/
-    padding: 2rem;
-}
-
-
-/*delete*/
-.box3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    font-family: Georgia;
-    /*  border-top: 5px solid #68a895;
-    border-right: 5px solid #68a895;
-    border-bottom: 5px solid #68a895;*/
-    padding: 2rem;
-}
-
-/*add new*/
-.box4 {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    font-family: Georgia;
-    /*   border-top: 5px solid #68a895;
-    border-right: 5px solid #68a895;
-    border-bottom: 5px solid #68a895;*/
-    padding: 2rem;
+h2 {
+    color:#004e64;
 }
